<resources>
    <string name="app_name">A!M</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="email">Эл.почта</string>
    <string name="confirm">Подтвердить</string>
    <string name="registr">Зарегистрироваться</string>
</resources>